--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>/favicon/favicon-16x16.png">
-    <link rel="manifest" href="<%= BASE_URL %>/favicon/site.webmanifest">
-    <link rel="mask-icon" href="<%= BASE_URL %>/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="<%= BASE_URL %>/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>static/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>static/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>static/favicon/favicon-16x16.png">
+    <link rel="manifest" href="<%= BASE_URL %>static/favicon/site.webmanifest">
+    <link rel="mask-icon" href="<%= BASE_URL %>static/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="<%= BASE_URL %>static/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="msapplication-config" content="<%= BASE_URL %>/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="<%= BASE_URL %>static/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <title>YWS</title>
   </head>
